--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,10 @@
+@import url("./utils/font-face-inter.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
+  font-family: "inter";
   box-sizing: border-box;
   position: relative;
   min-height: 100vh;
