Loaders, error, componet improvment, merging

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,9 @@ body {
   position: relative;
   min-height: 100vh;
 }
+.hideScrollBar {
+  @apply scroll-smooth;
+}
 
 .hideScrollBar::-webkit-scrollbar {
   display: none;
