--- a/client/src/components/AuthForm/authForm.css
+++ b/client/src/components/AuthForm/authForm.css
@@ -1,12 +1,12 @@
 .form {
-  min-width: 400px;
+  width: 85%;
+  max-width: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-width: 350px;
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
