--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url("./utils/font-face-inter.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: "inter";
+  font-family: "Outfit", "inter";
   box-sizing: border-box;
 }
 
