--- a/client/src/components/Loaders/pageloader.css
+++ b/client/src/components/Loaders/pageloader.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid green;
 }
+
 .loaderMiniContainer {
   display: flex;
   align-items: center;
@@ -12,6 +12,7 @@
   width: 130px;
   height: fit-content;
 }
+
 .barContainer {
   width: 100%;
   height: fit-content;
@@ -22,30 +23,33 @@
   gap: 10px;
   background-position: left;
 }
+
 .bar {
   width: 100%;
   height: 8px;
-  background: linear-gradient(
-    to right,
-    rgb(161, 94, 255),
-    rgb(217, 190, 255),
-    rgb(161, 94, 255)
-  );
+  background: linear-gradient(to right,
+      rgb(161, 94, 255),
+      rgb(217, 190, 255),
+      rgb(161, 94, 255));
   background-size: 200% 100%;
   border-radius: 10px;
   animation: bar ease-in-out 3s infinite alternate-reverse;
 }
+
 @keyframes bar {
   0% {
     background-position: left;
   }
+
   100% {
     background-position: right;
   }
 }
+
 .bar2 {
   width: 50%;
 }
+
 .svgIcon {
   position: absolute;
   left: -25px;
@@ -54,6 +58,7 @@
   width: 70%;
   animation: search ease-in-out 3s infinite alternate-reverse;
 }
+
 @keyframes search {
   0% {
     transform: translateX(0%) rotate(70deg);
@@ -63,10 +68,12 @@
     transform: translateX(100px) rotate(10deg);
   }
 }
+
 .svgIcon circle,
 line {
   stroke: rgb(162, 55, 255);
 }
+
 .svgIcon circle {
   fill: rgba(98, 65, 142, 0.238);
 }
